fix: toolbar spacing

--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -99,11 +99,12 @@ h4
   color: var(--cyan-heading-color-b)
   @include TypeHeadline6()
 
-cyan-toolbar h1, cyan-toolbar h2, cyan-toolbar h3, cyan-toolbar h4
+cyan-toolbar h1, cyan-toolbar h2, cyan-toolbar h3, cyan-toolbar h4,
+cyan-toolbar h1.TypeHeadline5
   line-height: 48px
-  margin-bottom: 0
-  padding-top: 0px
-  max-height: 48px
+  margin: 0
+  padding: 0
+  height: 48px
   white-space: nowrap
   overflow: hidden
   text-overflow: ellipsis
